# wannianli

./: .cursorrules  .gitignore  .prettierrc.yaml  MIGRATION.md  PRD.md  README.md  TODO.md  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.cursor/rules/: calendar-features.mdc  config-files-standards.mdc  data-management.mdc  data-storage-comparison.mdc  development-workflow.mdc  dynamic-date-icon.mdc  electron-main-process.mdc  icon-usage-guide.mdc  macos-menubar-app.mdc  macos-ui-design.mdc  module-organization.mdc  path-alias-standards.mdc  project-structure.mdc  react-components.mdc  system-tray-integration.mdc  tailwind-styling.mdc  tailwind-v4-migration.mdc  troubleshooting-guide.mdc  typescript-code-style.mdc  typescript-standards.mdc
.github/workflows/: release-tauri.yml
docs/design/: macos-calendar-design-v2.0.html
resources/date-icons/: README.md
scripts/: build-with-proxy.mjs  generate-latest-json.mjs  generateDateIcons.mjs
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  holiday.rs  main.rs  settings.rs  tray.rs  window.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useCalendar.ts  useSettings.ts
src/main/: dateIconManager.ts  index.ts  ipc.ts  settings.ts  tray.ts  window.ts
src/preload/: api.ts  index.d.ts  index.ts
src/shared/: types.ts
src/types/: index.ts
(+60 files in other folders)
