[package]
name = "wannianli"
version = "1.0.0"
description = "轻量级万年历桌面应用，支持农历和节假日"
authors = ["万年历开发团队"]
license = "MIT"
repository = "https://github.com/username/wannianli"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
